major change: theme change + other fixes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
          <nav class="nav container">
-            <a href="#" class="nav__logo">Logo</a>
+            <a href="#" class="nav__logo">
+               <img class="logo" src="assets/img/logo-1.png" alt="inzota">
+            </a>
 
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
@@ -37,7 +39,7 @@
                   </li>
 
                   <li class="nav__item">
-                     <a href="#" class="nav__link">Contact Me</a>
+                     <a href="#" class="nav__link">Contact</a>
                   </li>
                </ul>
 
@@ -91,7 +93,7 @@
 
             <div>
                <p class="login__signup">
-                  You do not have an account? <a href="#">Sign up</a>
+                  Don't have an account? <a href="#">Sign up</a>
                </p>
    
                <a href="#" class="login__forgot">
@@ -107,7 +109,46 @@
 
       <!--==================== MAIN ====================-->
       <main class="main">
-         <img src="assets/img/bg-image.png" alt="image" class="main__bg">
+         <div class="background">
+            <div class="circle"></div>
+            <div class="circle circle-2"></div>
+            <div class="triangle triangle-2"></div>
+            <div class="square"></div>
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+         </div>
+         <div class="coming-soon">
+            <h1>COMING SOON</h1>
+            <p>We're working hard to bring you a better experience. Please come back soon!</p>
+      
+            <div class="button-group">
+               <button class="btn btn-primary">
+                  <a href="#" class="btn__link"> Learn More</a>
+               </button>
+               <button class="btn btn-secondary">
+                  <a href="#" class="btn__link"> Contact Us</a>
+               </button>
+               <button class="btn btn-tertiary">
+                  <a href="#" class="btn_t__link"> Sign Up</a>
+               </button>
+            </div>
+
+            <div class="progress-container">
+               <div class="progress" style="--progress: 30%;"></div>
+               <label>
+                  <h3>Product Development</h3>
+                  <div class="progress__container"> 
+                     <div class="progress__fill completion__container"></div> 
+                 </div>
+                </label>
+            </div>
+
+            <div class="profiles__container">
+               <div class="profile">
+                  <img class="profile__container-img" src="assets/img/safire.png" alt="safire" class="profile__img">
+                  <img class="profile__container-img" src="assets/img/rupnil.png" alt="rupnil" class="profile__img">
+               </div>
+            </div>
       </main>
       
       <!--=============== MAIN JS ===============-->
