minor change: removed useless buttons
add padding to team card and removed login and search buttons

--- a/index.html
+++ b/index.html
@@ -20,17 +20,12 @@
     <div class="navbar-center">
       <a class="navbar-center-item" href="/contact">Contact</a>
       <a class="navbar-center-item" href="/about">About</a>
-      <a class="navbar-center-item">Search</a>
     </div>
     <div class="navbar">
       <a class="navbar-text-item" href="/contact">Contact</a>
       <a class="navbar-text-item" href="/about">About</a>
-      <a class="navbar-text-item">Search</a>
-      <a class="navbar-login-item" href="/login">Login</a>
       <a class="navbar-icon-item" href="/contact"><i class="ri-team-line"></i></a>
       <a class="navbar-icon-item" href="/about"><i class="ri-align-left"></i></a>
-      <a class="navbar-icon-item"><i class="ri-search-line"></i></a>
-      <a class="navbar-icon-item"><i class="ri-login-box-line"></i></a>
     </div>
   </nav>
   <div class="main">
@@ -71,11 +66,11 @@
         <span class="team-title">Team</span>
         <hr width="500px">
         <div class="team-founders">
-          <span style="font-size: 3em;">Founders</span>
+          <span style="font-size: 3em;">Founders & co-CEOs</span>
           <div style="display: flex; gap: 100px; flex-wrap: wrap; align-items: center; justify-content: center;" class="team-founders-member">
             <div class="team-member safire">
               <img src="assets/img/safire.png">
-              <span>Tejasva</span>
+              <span>Tejaswa</span>
               <span style="margin: 15px 15px 0 15px;">Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
                 sint cillum
                 sint consectetur
@@ -88,7 +83,7 @@
             </div>
             <div class="team-member runpil">
               <img src="assets/img/rupnil.png" class="member-image">
-              <span class="member-name">Runpil</span>
+              <span class="member-name">Rupnil</span>
                 <span style="margin: 15px 15px 0 15px;">Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
                   sint cillum
                   sint consectetur
@@ -102,7 +97,7 @@
             </div>
           </div>
           <div class="team-frontend">
-            <span style="font-size: 3em; text-align: center;">Front-end developer</span>
+            <span style="font-size: 3em; text-align: center;">Lead Frontend Developers</span>
             <div style="display: flex; gap: 100px;">
               <div class="team-member mquery">
                 <img src="assets/img/MQuery.png">
@@ -135,7 +130,6 @@
         <div class="actions">
           <a href="/contact">Contact us</a>
           <a href="/about">About us</a>
-          <a href="/login">Login</a>
         </div>
       </div>
     </div>
